--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>DVR Time Converter</title>
+  <title>Freeport Detectives DVR Time Converter</title>
   <link rel="manifest" href="manifest.json" />
   <style>
     body {
