--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
     <label for="dvrNow">Current DVR Time</label>
     <input type="time" id="dvrNow" />
 
-    <label for="realPast">Real Time to View</label>
+    <label for="realPast">Real Time of Incident</label>
     <input type="time" id="realPast" />
 
     <button onclick="convertTime()">Convert</button>
