--- a/index.html
+++ b/index.html
@@ -68,8 +68,7 @@
 </head>
 <body>
   <div class="card">
-    <h1>Freeport Detectives</h1>
-    <h2>DVR Time Converter</h2>
+    <h1>Freeport Detectives DVR Time Converter</h1>
     <label for="realNow">Current Real Time</label>
     <input type="time" id="realNow" />
 
