--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Freeport Detectives DVR Time Converter</title>
+  <title>DVR Time Converter</title>
   <link rel="manifest" href="manifest.json" />
   <style>
     body {
@@ -13,7 +13,7 @@
       display: flex;
       justify-content: center;
       align-items: center;
-      height: 100vh;
+      height: 120vh;
       margin: 0;
     }
     .card {
@@ -49,7 +49,7 @@
       color: #fff;
       border: none;
       border-radius: 6px;
-      font-size: 1rem;
+      font-size: 2rem;
       cursor: pointer;
     }
     button:hover {
@@ -68,7 +68,7 @@
 </head>
 <body>
   <div class="card">
-    <h1>Freeport Detectives DVR Time Converter</h1>
+    <h1>DVR Time Converter</h1>
     <label for="realNow">Current Real Time</label>
     <input type="time" id="realNow" />
 
