--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="manifest" href="manifest.json" />
   <style>
     body {
-      font-family: Helvetica;
+      font-family: Papyrus;
       background-color: #f4f7fb;
       color: #1a1a1a;
       display: flex;
