--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
       border-radius: 6px;
       font-size: 1.5rem;
       cursor: pointer;
+      font: Stencil;
     }
     button:hover {
       background-color: #0055a5;
