--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="manifest" href="manifest.json" />
   <style>
     body {
-      font-family: Papyrus;
+      font-family: Optima;
       background-color: #f4f7fb;
       color: #1a1a1a;
       display: flex;
@@ -52,7 +52,7 @@
       border-radius: 6px;
       font-size: 1.5rem;
       cursor: pointer;
-      font: Stencil;
+      font: Papyrus;
     }
     button:hover {
       background-color: #0055a5;
